--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
-                <img src="https://i.pinimg.com/280x280_RS/3e/d4/1d/3ed41df3ddc408b417cd8f7e6b5d3cae.jpg" alt="Avatar"
+                <img src="priyesh.jpg1.jpg" alt="Avatar"
                     style="width:300px;height:300px;">
             </div>
             <div class="flip-card-back">
-                <h1>John Doe</h1>
-                <p>Architect & Engineer</p>
-                <p>We love that guy</p>
+                <h1>Priyesh Mishra</h1>
+                <p>Software Engineer</p>
+                <p>I love to coding</p>
             </div>
         </div>
     </div>
